--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             </div>
         </div>
     </div>
-    <button class="btn-history" onclick="showHistory()">Ver Historial de operaciones</button>
+    <button class="btn-history" onclick="showHistory()">Mostrar Historial de operaciones</button>
     
     <div class="history-container" id="history-container">
         
         <div class="history-modal">
             <div class="top-section">
                 <h1>Historial de operaciones</h1>
-                <button onclick="closeHistory()" class="btn-close">X</button>
+                <button onclick="closeHistory()" class= "btn-close">X</button>
             </div>
             <div class="modal-content">
                 <div class="history-list" id="history-list">
